refactor: replace security classes to security package, re-configure CORS